display current page url and favicon

--- a/website-blocker/popup.html
+++ b/website-blocker/popup.html
@@ -3,14 +3,19 @@
 
 <head>
     <title>Website Blocker</title>
+    <style>
+        body {
+            text-align: center;
+        }
+    </style>
     <script src="popup.js" defer></script>
 </head>
 
 <body>
-    <h2>Blocked Websites</h2>
-    <ul id="blocked-list"></ul>
-    <input type="text" id="website-input" placeholder="Enter website">
+    <img src="" alt="" id="current-page-icon">
+    <h1 id="current-page"></h1>
     <button id="add-button">Add</button>
+
 
 </body>
 
